[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/ProgressBar3D.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/LilitaOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/icons/reloading-bg.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/reloading-progress.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/reload.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/reload-start.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[node name="ProgressBar3D" type="Spatial"]
script = ExtResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
billboard = 1

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 128, 128 )
transparent_bg = true
render_target_v_flip = true

[node name="ProgressBar" type="TextureProgress" parent="Viewport"]
margin_right = 128.0
margin_bottom = 128.0
value = 33.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressLabel" type="Label" parent="Viewport"]
margin_left = 32.0
margin_top = 48.0
margin_right = 96.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "1.5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReloadStartAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ReloadFinishAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
